Adds google image maps api link.

--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -4,7 +4,11 @@
 <h1 class="h3">
     Mailing addresses
 </h1>
+
+{# Google Image Maps API Docs:
+   https://developers.google.com/maps/documentation/staticmaps/index #}
 <img src="http://maps.googleapis.com/maps/api/staticmap?zoom=16&size=300x226&markers=color:red%7C1275+First+St.+NE+Washington,+DC+20010" alt="">
+
 <section class="content_block content_block__flush-top">
     <h1 class="h5">
         Administrative offices
