--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -8,6 +8,8 @@
 {# Google Image Maps API Docs:
    https://developers.google.com/maps/documentation/staticmaps/index #}
 <p>
+    <!-- Does this map need to be edited in WP? Probably.
+         Also maybe it is static instead of using the Google Image API -->
     <img src="http://maps.googleapis.com/maps/api/staticmap?zoom=16&size=300x226&markers=color:red%7C1275+First+St.+NE+Washington,+DC+20010" alt="">
 </p>
 
