--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -52,64 +52,7 @@
             <!-- This might actually not be aside content. Maybe change to section? -->
             <aside class="content_sidebar">
                 {%- include "mailing-addresses.html" %}
-                <section class="content_block">
-                    <h1 class="h5">
-                        Accessibility feedback
-                    </h1>
-                    <p>
-                        Our work is accessible to all members of the public, regardless of disability, in compliance with the Rehabilitation Act of 1973, including Sections 508 and 504. Let us know if you encounter something problematic for users with disabilities. Include the nature of the problem, your preferred format, and the URL of any inaccessible material.
-                    </p>
-                    <a class="jump-link" href="#">
-                        Find out more about our accessibility policy
-                    </a>
-                </section>
-                <section class="content_block">
-                    <h1 class="h5">
-                        Whistleblowers
-                    </h1>
-                    <p>
-                        We welcome tips about potential violations of federal consumer financial law. Whistleblowers and law enforcement tipsters – including current or former employees of potential violators, contractors, vendors, or industry competitors – should contact us directly at:
-                    </p>
-                    <ul class="list list__icons">
-                        <li class="list_item">
-                            <span class="cf-icon cf-icon-email list_icon"></span>
-                            <a class="list_link" href="mailto:something@cfpb.gov">
-                                something@consumerfinance.gov
-                            </a>
-                        </li>
-                        <li class="list_item">
-                            <span class="cf-icon cf-icon-phone list_icon"></span>
-                            <span class="short-desc">(888) 888-8888</span>
-                        </li>
-                    </ul>
-                </section>
-                <section class="content_block">
-                    <h1 class="h5">
-                        Tribal consultation
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id earum quia minima magni quae reprehenderit quas aperiam atque libero officia provident odio quis quasi itaque sint accusantium iure sequi impedit.
-                    </p>
-                    <ul class="list list__icons">
-                        <li class="list_item">
-                            <span class="cf-icon cf-icon-email list_icon"></span>
-                            <a class="list_link" href="mailto:something@cfpb.gov">
-                                something@consumerfinance.gov
-                            </a>
-                        </li>
-                    </ul>
-                </section>
-                <section class="content_block">
-                    <h1 class="h5">
-                        Order print publications
-                    </h1>
-                    <p>
-                        Order printed educational, instructional, and research materials. Some are available in languages besides English.
-                    </p>
-                    <a class="jump-link" href="#">
-                        Order CFPB print materials
-                    </a>
-                </section>
+                {%- include "sidebar-contacts.html" %}
             </aside>
 
         </div>
