--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -42,19 +42,15 @@
         <div class="content_line"></div>
 
         <div class="wrapper content_wrapper">
-
             <div class="content_main">
                 <section>
                     {%- include "contact-list.html" %}
                 </section>
             </div>
-
-            <!-- This might actually not be aside content. Maybe change to section? -->
             <aside class="content_sidebar">
                 {%- include "mailing-addresses.html" %}
-                {%- include "sidebar-contacts.html" %}
+                {%- include "promoted-contacts.html" %}
             </aside>
-
         </div>
     </main>
 
