Makes mailing addy titles dynamic.

--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -15,13 +15,13 @@
 
 <section class="content_block content_block__flush-top">
     <h1 class="h5">
-        Administrative offices
+        {{ administrative_offices.title }}
     </h1>
     <p class="short-desc">
         {{- macros.format_address(administrative_offices) -}}
     </p>
     <h1 class="h5">
-        Consumer Contact center
+        {{ consumer_contact_center.title }}
     </h1>
     <p class="short-desc">
         {{- macros.format_address(consumer_contact_center) -}}
