Adds link to map.

--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -10,7 +10,9 @@
 <p>
     <!-- Does this map need to be edited in WP? Probably.
          Also maybe it is static instead of using the Google Image API -->
-    <img src="http://maps.googleapis.com/maps/api/staticmap?zoom=16&size=330x250&markers=color:red%7C1275+First+St.+NE+Washington,+DC+20010&scale=2" alt="">
+    <a href="https://www.google.com/maps/place/1275+First+St+NE,+Washington,+DC+20010">
+        <img src="http://maps.googleapis.com/maps/api/staticmap?zoom=16&size=330x250&markers=color:red%7C1275+First+St.+NE+Washington,+DC+20010&scale=2" alt="">
+    </a>
 </p>
 
 <section class="content_block content_block__flush-top">
