--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -7,13 +7,11 @@
 
 {# Google Image Maps API Docs:
    https://developers.google.com/maps/documentation/staticmaps/index #}
-<p>
-    <!-- Does this map need to be edited in WP? Probably.
-         Also maybe it is static instead of using the Google Image API -->
+<figure>
     <a href="https://www.google.com/maps/place/1275+First+St+NE,+Washington,+DC+20010">
         <img src="http://maps.googleapis.com/maps/api/staticmap?zoom=16&size=330x250&markers=color:red%7C1275+First+St.+NE+Washington,+DC+20010&scale=2" alt="">
     </a>
-</p>
+</figure>
 
 <section class="content_block content_block__flush-top">
     <h1 class="h5">
