--- a/contact-us/submit-a-complaint.html
+++ b/contact-us/submit-a-complaint.html
@@ -39,6 +39,8 @@
     {%- endif %}
     </div>
 </div>
+{%- if submit_a_complaint.web != 'None' %}
 <a class="jump-link" href="{{ submit_a_complaint.web }}">
-    {{ submit_a_complaint.web }}
+    {{ submit_a_complaint.web_desc if submit_a_complaint.web_desc != 'None' else submit_a_complaint.web }}
 </a>
+{%- endif %}
