--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -7,11 +7,20 @@
 
 {# Google Image Maps API Docs:
    https://developers.google.com/maps/documentation/staticmaps/index #}
+{% if administrative_offices.street_2 != 'None' and
+      administrative_offices.city != 'None' and
+      administrative_offices.state != 'None' and
+      administrative_offices.zip != 'None' %}
+    {% set administrative_offices_map = administrative_offices.street_2 + ',+' +
+       administrative_offices.city + '+' +
+       administrative_offices.state + '+' +
+       administrative_offices.zip_code %}
 <figure>
-    <a href="https://www.google.com/maps/place/1275+First+St+NE,+Washington,+DC+20010">
-        <img src="http://maps.googleapis.com/maps/api/staticmap?zoom=16&size=330x250&markers=color:red%7C1275+First+St.+NE+Washington,+DC+20010&scale=2" alt="">
+    <a href="https://www.google.com/maps/place/{{ administrative_offices_map }}">
+        <img src="http://maps.googleapis.com/maps/api/staticmap?zoom=16&size=330x250&markers=color:red%7C{{ administrative_offices_map }}&scale=2" alt="">
     </a>
 </figure>
+{% endif %}
 
 <section class="content_block content_block__flush-top">
     <h1 class="h5">
