Collapses some extra markup.

--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -232,11 +232,9 @@
                                 illuminate the financial landscape and foster transparency in the
                                 marketplace.</p>
 
-                            <div class="press-logo_logo">
-                                <figure>
-                                    <img src="CFPB_2Tone_isolated_RGB_352.png" alt="CFPB logo" width="176">
-                                </figure>
-                            </div>
+                            <figure class="press-logo_logo">
+                                <img src="CFPB_2Tone_isolated_RGB_352.png" alt="CFPB logo" width="176">
+                            </figure>
 
                         </div><!-- END .content-l -->
 
