Updates project landing page.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             </div>
                             <h3><a href="newsroom/">Landing page</a></h3>
                             <h3><a href="newsroom/cfpb-takes-action-against-realtysouth-for-mortgage-disclosure-violations">Post</a></h3>
-                            <h3><a href="newsroom/press-resources.html">Press Resources</a></h3>
+                            <h3><a href="newsroom/press-resources/">Press Resources</a></h3>
                         </div>
                         <div class="demo-col-6 demo-spaced">
                             <div class="meta-header">
@@ -153,6 +153,20 @@
                                 </span>
                             </div>
                             <h3><a href="newsroom_static/landing.html">Landing page</a></h3>
+                        </div>
+                    </div>
+
+                    <div class="demo-spaced">
+                        <h2>Contact us templates</h2>
+                    </div>
+                    <div class="demo-cols">
+                        <div class="demo-col-6 demo-spaced">
+                            <div class="meta-header">
+                                <span class="meta-header_left category-slug">
+                                    Sheer
+                                </span>
+                            </div>
+                            <h3><a href="contact-us/">Landing page</a></h3>
                         </div>
                     </div>
 
