More control over word breaking.

--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -18,7 +18,7 @@
                 {%- if contact.email != 'None' %}
                     <li class="list_item">
                         <span class="cf-icon cf-icon-email list_icon"></span>
-                        <a class="list_link" href="mailto:{{ contact.email }}">
+                        <a class="list_link u-break-word" href="mailto:{{ contact.email }}">
                             {{ contact.email }}
                         </a>
                     </li>
@@ -26,7 +26,7 @@
                 {%- if contact.email_2 != 'None' %}
                     <li class="list_item">
                         <span class="cf-icon cf-icon-email list_icon"></span>
-                        <a class="list_link" href="mailto:{{ contact.email_2 }}">
+                        <a class="list_link u-break-word" href="mailto:{{ contact.email_2 }}">
                             {{ contact.email_2 }}
                         </a>
                     </li>
