--- a/contact-us/general-inqueries.html
+++ b/contact-us/general-inqueries.html
@@ -10,7 +10,7 @@
 {%- if general_inqueries.email != 'None' %}
     <li class="list_item">
         <span class="cf-icon cf-icon-email list_icon"></span>
-        <a class="list_link" href="mailto:{{ general_inqueries.email }}">
+        <a class="list_link u-break-word" href="mailto:{{ general_inqueries.email }}">
             {{ general_inqueries.email }}
         </a>
     </li>
