--- a/contact-us/promoted-contacts.html
+++ b/contact-us/promoted-contacts.html
@@ -34,7 +34,7 @@
         {%- if whistleblowers.email != 'None' %}
             <li class="list_item">
                 <span class="cf-icon cf-icon-email list_icon"></span>
-                <a class="list_link" href="mailto:{{ whistleblowers.email }}">
+                <a class="list_link u-break-word" href="mailto:{{ whistleblowers.email }}">
                     {{ whistleblowers.email }}
                 </a>
             </li>
@@ -64,7 +64,7 @@
         <ul class="list list__icons">
             <li class="list_item">
                 <span class="cf-icon cf-icon-email list_icon"></span>
-                <a class="list_link" href="mailto:{{ tribal_consultation.email }}">
+                <a class="list_link u-break-word" href="mailto:{{ tribal_consultation.email }}">
                     {{ tribal_consultation.email }}
                 </a>
             </li>
