--- a/contact-us/mailing-addresses.html
+++ b/contact-us/mailing-addresses.html
@@ -24,7 +24,7 @@
     </figure>
     {% endif %}
 
-    <section class="content_block content_block__flush-top content-l_col content-l_col__stack-on-cols content-l_col-1-2">
+    <div class="content_block content_block__flush-top content-l_col content-l_col__stack-on-cols content-l_col-1-2">
         <h1 class="h5">
             {{ administrative_offices.title }}
         </h1>
@@ -37,6 +37,6 @@
         <p class="short-desc">
             {{- macros.format_address(consumer_contact_center) -}}
         </p>
-    </section>
+    </div>
     
 </div>
