Better sidebar divisions in contact.

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -49,6 +49,7 @@
             </div>
             <aside class="content_sidebar">
                 {%- include "mailing-addresses.html" %}
+                <div class="content_line"></div>
                 {%- include "promoted-contacts.html" %}
             </aside>
         </div>
