--- a/contact-us/contact-list.html
+++ b/contact-us/contact-list.html
@@ -8,7 +8,7 @@
                 {{ contact.content|safe }}
             {%- if contact.web != 'None' %}
                 <a class="jump-link" href="{{ contact.web }}">
-                    {{ contact.web_desc if contact.web_desc != 'None' else contact.web }}
+                    {{ contact.web_desc if contact.web_desc != 'None' else contact.web }}<span class="cf-icon cf-icon-right jump-link_icon"></span>
                 </a>
             {%- endif %}
             </div>
@@ -16,17 +16,17 @@
             {%- if contact.email != 'None' or contact.phone != 'None' or contact.fax != 'None' %}
                 <ul class="list list__icons">
                 {%- if contact.email != 'None' %}
-                    <li class="list_item">
+                    <li class="list_item u-break-word">
                         <span class="cf-icon cf-icon-email list_icon"></span>
-                        <a class="list_link u-break-word" href="mailto:{{ contact.email }}">
+                        <a class="list_link" href="mailto:{{ contact.email }}">
                             {{ contact.email }}
                         </a>
                     </li>
                 {%- endif %}
                 {%- if contact.email_2 != 'None' %}
-                    <li class="list_item">
+                    <li class="list_item u-break-word">
                         <span class="cf-icon cf-icon-email list_icon"></span>
-                        <a class="list_link u-break-word" href="mailto:{{ contact.email_2 }}">
+                        <a class="list_link" href="mailto:{{ contact.email_2 }}">
                             {{ contact.email_2 }}
                         </a>
                     </li>
