--- a/contact-us/general-inqueries.html
+++ b/contact-us/general-inqueries.html
@@ -8,9 +8,9 @@
 </p>
 <ul class="list list__icons">
 {%- if general_inqueries.email != 'None' %}
-    <li class="list_item">
+    <li class="list_item u-break-word">
         <span class="cf-icon cf-icon-email list_icon"></span>
-        <a class="list_link u-break-word" href="mailto:{{ general_inqueries.email }}">
+        <a class="list_link" href="mailto:{{ general_inqueries.email }}">
             {{ general_inqueries.email }}
         </a>
     </li>
