--- a/newsroom/press-resources/index.html
+++ b/newsroom/press-resources/index.html
@@ -165,19 +165,19 @@
                                 <ul class="list list__links">
                                     <li class="list_item">
                                         <a class="list_link jump-link" href="#">
-                                            Biography
+                                            Biography<span class="cf-icon cf-icon-right jump-link_icon"></span>
                                         </a>
                                     </li>
                                     <li class="list_item">
-                                        <a class="list_link jump-link jump-link__download"
+                                        <a class="list_link jump-link"
                                            href="201402_cfpb_photo_richard-cordray_high-res.jpg">
-                                            High-res portrait
+                                            High-res portrait<span class="cf-icon cf-icon-download jump-link_icon"></span>
                                         </a>
                                     </li>
                                     <li class="list_item">
-                                        <a class="list_link jump-link jump-link__download"
+                                        <a class="list_link jump-link"
                                            href="201402_cfpb_photo_richard-cordray_low-res.jpg">
-                                            Low-res portrait
+                                            Low-res portrait<span class="cf-icon cf-icon-download jump-link_icon"></span>
                                         </a>
                                     </li>
                                 </ul>
@@ -193,19 +193,19 @@
                                 <ul class="list list__links">
                                     <li class="list_item">
                                         <a class="list_link jump-link" href="#">
-                                            Biography
+                                            Biography<span class="cf-icon cf-icon-right jump-link_icon"></span>
                                         </a>
                                     </li>
                                     <li class="list_item">
-                                        <a class="list_link jump-link jump-link__download"
+                                        <a class="list_link jump-link"
                                            href="201405_cfpb_photo_steve-antonakes_high-res.jpg">
-                                            High-res portrait
+                                            High-res portrait<span class="cf-icon cf-icon-download jump-link_icon"></span>
                                         </a>
                                     </li>
                                     <li class="list_item">
-                                        <a class="list_link jump-link jump-link__download"
+                                        <a class="list_link jump-link"
                                            href="201405_cfpb_photo_steve-antonakes_low-res.jpg">
-                                            Low-res portrait
+                                            Low-res portrait<span class="cf-icon cf-icon-download jump-link_icon"></span>
                                         </a>
                                     </li>
                                 </ul>
@@ -214,7 +214,7 @@
                         </div><!-- END .content-l -->
 
                         <a class="jump-link jump-link__large" href="#" data-icon="right">
-                            Find out more about our leadership
+                            Find out more about our leadership<span class="cf-icon cf-icon-right jump-link_icon"></span>
                         </a>
 
                     </section><!-- END .press-section.press-photos-bios -->
@@ -239,7 +239,7 @@
                         </div><!-- END .content-l -->
 
                         <a class="jump-link jump-link__large" href="https://cfpb.github.io/design-manual/identity/logo/">
-                            Logo files and more in the CFPB Design Manual
+                            Logo files and more in the CFPB Design Manual<span class="cf-icon cf-icon-right jump-link_icon"></span>
                         </a>
 
                     </section><!-- END .press-section.press-logo -->
